--- a/jobs/dwd_rival_stats_distincted_di_1d.yaml
+++ b/jobs/dwd_rival_stats_distincted_di_1d.yaml
@@ -3,32 +3,62 @@ config:
   source: 'default'
   sql: |
     CREATE TABLE IF NOT EXISTS dwd_rival_stats_distincted_di_1d (
-      id BIGINT AUTO_INCREMENT PRIMARY KEY,
-      category_large VARCHAR(255) NOT NULL COMMENT '大类',
-      category_level1 VARCHAR(255) NOT NULL COMMENT '一级类目',
-      category_level3 VARCHAR(255) NOT NULL COMMENT '三级类目',
-      classification_level1 VARCHAR(255) NOT NULL COMMENT '一级分类',
-      classification_level2 VARCHAR(255) NOT NULL COMMENT '二级分类',
-      product_name VARCHAR(255) NOT NULL COMMENT '商品名称',
-      spec VARCHAR(255) NOT NULL COMMENT '规格',
-      sku_id VARCHAR(255) NOT NULL COMMENT 'sku_id',
-      product_id VARCHAR(255) NOT NULL COMMENT '商品ID',
-      upc_code VARCHAR(255) NOT NULL COMMENT 'upc码',
-      current_price VARCHAR(255) NOT NULL COMMENT '现价',
-      original_price VARCHAR(255) NOT NULL COMMENT '原价',
-      estimated_price VARCHAR(255) NOT NULL COMMENT '商品预估价',
-      activity_price VARCHAR(255) NOT NULL COMMENT '活动价',
-      final_price VARCHAR(255) NOT NULL COMMENT '到手价',
-      discount_rate VARCHAR(255) NOT NULL COMMENT '商品折扣',
-      coupon VARCHAR(255) NOT NULL COMMENT '优惠券',
-      monthly_sales VARCHAR(255) NOT NULL COMMENT '商品月售',
-      stock VARCHAR(255) NOT NULL COMMENT '库存',
-      packaging_fee VARCHAR(255) NOT NULL COMMENT '包装费',
-      min_order_qty VARCHAR(255) NOT NULL COMMENT '起订',
-      shop_name VARCHAR(255) NOT NULL COMMENT '店铺名称',
-      date_str VARCHAR(255) NOT NULL COMMENT '日期',
-      transaction_amount VARCHAR(255) NOT NULL COMMENT '交易额',
-      subsidy_amount VARCHAR(255) NOT NULL COMMENT '补贴额',
-      reference_cost VARCHAR(255) NOT NULL COMMENT '参考货值',
-      dt VARCHAR(255) NOT NULL COMMENT '分区字段. yyyyMMdd'
-    ) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COMMENT '竞对去重';
+        id BIGINT GENERATED ALWAYS AS IDENTITY PRIMARY KEY,
+        category_large VARCHAR(255) NOT NULL,
+        category_level1 VARCHAR(255) NOT NULL,
+        category_level3 VARCHAR(255) NOT NULL,
+        classification_level1 VARCHAR(255) NOT NULL,
+        classification_level2 VARCHAR(255) NOT NULL,
+        product_name VARCHAR(255) NOT NULL,
+        spec VARCHAR(255) NOT NULL,
+        sku_id VARCHAR(255) NOT NULL,
+        product_id VARCHAR(255) NOT NULL,
+        upc_code VARCHAR(255) NOT NULL,
+        current_price VARCHAR(255) NOT NULL,
+        original_price VARCHAR(255) NOT NULL,
+        estimated_price VARCHAR(255) NOT NULL,
+        activity_price VARCHAR(255) NOT NULL,
+        final_price VARCHAR(255) NOT NULL,
+        discount_rate VARCHAR(255) NOT NULL,
+        coupon VARCHAR(255) NOT NULL,
+        monthly_sales VARCHAR(255) NOT NULL,
+        stock VARCHAR(255) NOT NULL,
+        packaging_fee VARCHAR(255) NOT NULL,
+        min_order_qty VARCHAR(255) NOT NULL,
+        shop_name VARCHAR(255) NOT NULL,
+        date_str VARCHAR(255) NOT NULL,
+        transaction_amount VARCHAR(255) NOT NULL,
+        subsidy_amount VARCHAR(255) NOT NULL,
+        reference_cost VARCHAR(255) NOT NULL,
+        dt VARCHAR(255) NOT NULL
+    );
+
+    COMMENT ON TABLE dwd_rival_stats_distincted_di_1d IS '竞对去重';
+
+    COMMENT ON COLUMN dwd_rival_stats_distincted_di_1d.category_large IS '大类';
+    COMMENT ON COLUMN dwd_rival_stats_distincted_di_1d.category_level1 IS '一级类目';
+    COMMENT ON COLUMN dwd_rival_stats_distincted_di_1d.category_level3 IS '三级类目';
+    COMMENT ON COLUMN dwd_rival_stats_distincted_di_1d.classification_level1 IS '一级分类';
+    COMMENT ON COLUMN dwd_rival_stats_distincted_di_1d.classification_level2 IS '二级分类';
+    COMMENT ON COLUMN dwd_rival_stats_distincted_di_1d.product_name IS '商品名称';
+    COMMENT ON COLUMN dwd_rival_stats_distincted_di_1d.spec IS '规格';
+    COMMENT ON COLUMN dwd_rival_stats_distincted_di_1d.sku_id IS 'sku_id';
+    COMMENT ON COLUMN dwd_rival_stats_distincted_di_1d.product_id IS '商品ID';
+    COMMENT ON COLUMN dwd_rival_stats_distincted_di_1d.upc_code IS 'upc码';
+    COMMENT ON COLUMN dwd_rival_stats_distincted_di_1d.current_price IS '现价';
+    COMMENT ON COLUMN dwd_rival_stats_distincted_di_1d.original_price IS '原价';
+    COMMENT ON COLUMN dwd_rival_stats_distincted_di_1d.estimated_price IS '商品预估价';
+    COMMENT ON COLUMN dwd_rival_stats_distincted_di_1d.activity_price IS '活动价';
+    COMMENT ON COLUMN dwd_rival_stats_distincted_di_1d.final_price IS '到手价';
+    COMMENT ON COLUMN dwd_rival_stats_distincted_di_1d.discount_rate IS '商品折扣';
+    COMMENT ON COLUMN dwd_rival_stats_distincted_di_1d.coupon IS '优惠券';
+    COMMENT ON COLUMN dwd_rival_stats_distincted_di_1d.monthly_sales IS '商品月售';
+    COMMENT ON COLUMN dwd_rival_stats_distincted_di_1d.stock IS '库存';
+    COMMENT ON COLUMN dwd_rival_stats_distincted_di_1d.packaging_fee IS '包装费';
+    COMMENT ON COLUMN dwd_rival_stats_distincted_di_1d.min_order_qty IS '起订';
+    COMMENT ON COLUMN dwd_rival_stats_distincted_di_1d.shop_name IS '店铺名称';
+    COMMENT ON COLUMN dwd_rival_stats_distincted_di_1d.date_str IS '日期';
+    COMMENT ON COLUMN dwd_rival_stats_distincted_di_1d.transaction_amount IS '交易额';
+    COMMENT ON COLUMN dwd_rival_stats_distincted_di_1d.subsidy_amount IS '补贴额';
+    COMMENT ON COLUMN dwd_rival_stats_distincted_di_1d.reference_cost IS '参考货值';
+    COMMENT ON COLUMN dwd_rival_stats_distincted_di_1d.dt IS '分区字段. yyyyMMdd';
