--- a/jobs/dwd_store_common_commodity_di_1d.yaml
+++ b/jobs/dwd_store_common_commodity_di_1d.yaml
@@ -3,55 +3,108 @@ config:
   source: 'default'
   sql: |
     CREATE TABLE IF NOT EXISTS dwd_store_common_commodity_di_1d (
-      id BIGINT AUTO_INCREMENT PRIMARY KEY,
-      shop_name VARCHAR(255) NOT NULL COMMENT '门店名称',
-      shop_code VARCHAR(255) NOT NULL COMMENT '门店编码',
-      haibo_shop_id VARCHAR(255) NOT NULL COMMENT '海博门店id',
-      product_name VARCHAR(255) NOT NULL COMMENT '商品名称',
-      haibo_product_id VARCHAR(255) NOT NULL COMMENT '海博商品ID',
-      product_code VARCHAR(255) NOT NULL COMMENT '商品编码',
-      barcode VARCHAR(255) NOT NULL COMMENT '条形码',
-      spec VARCHAR(255) NOT NULL COMMENT '规格',
-      unit VARCHAR(255) NOT NULL COMMENT '单位',
-      jd_sosong_price VARCHAR(255) NOT NULL COMMENT '京东秒送渠道售价',
-      meituan_price VARCHAR(255) NOT NULL COMMENT '美团渠道售价',
-      eleme_price VARCHAR(255) NOT NULL COMMENT '饿了么渠道售价',
-      member_price VARCHAR(255) NOT NULL COMMENT '会员价',
-      online_stock VARCHAR(255) NOT NULL COMMENT '线上可售库存',
-      frontend_category VARCHAR(255) NOT NULL COMMENT '前台类目',
-      jd_sosong_sale_status VARCHAR(255) NOT NULL COMMENT '京东秒送售卖状态',
-      meituan_sale_status VARCHAR(255) NOT NULL COMMENT '美团售卖状态',
-      eleme_sale_status VARCHAR(255) NOT NULL COMMENT '饿了么售卖状态',
-      permanent_offline_status VARCHAR(255) NOT NULL COMMENT '全渠道永久停售状态',
-      out_of_stock VARCHAR(255) NOT NULL COMMENT '无库存可售',
-      product_level VARCHAR(255) NOT NULL COMMENT '商品级别',
-      existing VARCHAR(255) NOT NULL COMMENT '是否存在',
-      offline_sale_status VARCHAR(255) NOT NULL COMMENT '线下品售卖状态',
-      is_listed_item VARCHAR(255) NOT NULL COMMENT '是否清单商品',
-      meituan_min_qty VARCHAR(255) NOT NULL COMMENT '美团起购数',
-      eleme_min_qty VARCHAR(255) NOT NULL COMMENT '饿了么起购数',
-      jd_sosong_min_qty_1 VARCHAR(255) NOT NULL COMMENT '京东秒送起购数',
-      jd_sosong_min_qty_2 VARCHAR(255) NOT NULL COMMENT '京东秒送起购数',
-      product_tags VARCHAR(255) NOT NULL COMMENT '商品标签',
-      sales_avg_30d VARCHAR(255) NOT NULL COMMENT '30日日均销量',
-      sales_avg_14d VARCHAR(255) NOT NULL COMMENT '14日日均销量',
-      sales_avg_7d VARCHAR(255) NOT NULL COMMENT '7日日均销量',
-      sales_avg_3d VARCHAR(255) NOT NULL COMMENT '3日日均销量',
-      sales_total_30d VARCHAR(255) NOT NULL COMMENT '30日总销量',
-      sales_total_14d VARCHAR(255) NOT NULL COMMENT '14日总销量',
-      sales_total_7d VARCHAR(255) NOT NULL COMMENT '7日总销量',
-      sales_total_3d VARCHAR(255) NOT NULL COMMENT '3日总销量',
-      created_time VARCHAR(255) NOT NULL COMMENT '创建时间',
-      updated_time VARCHAR(255) NOT NULL COMMENT '最新更新时间',
-      meituan_shop_product_name VARCHAR(255) NOT NULL COMMENT '美团门店商品名称',
-      eleme_shop_product_name VARCHAR(255) NOT NULL COMMENT '饿了么门店商品名称',
-      spu_id VARCHAR(255) NOT NULL COMMENT 'SPUID',
-      gross_weight VARCHAR(255) NOT NULL COMMENT '毛重',
-      meituan_gross_weight VARCHAR(255) NOT NULL COMMENT '美团毛重',
-      image_url VARCHAR(255) NOT NULL COMMENT '图片',
-      custom_attributes VARCHAR(255) NOT NULL COMMENT '自定义商品属性',
-      has_rich_description VARCHAR(255) NOT NULL COMMENT '有无图文描述',
-      is_meituan_standard_ref VARCHAR(255) NOT NULL COMMENT '引用美团标库',
-      subtitle VARCHAR(255) NOT NULL COMMENT '副标题',
-      dt VARCHAR(255) NOT NULL COMMENT '分区字段. yyyyMMdd'
-    ) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COMMENT '门店商品';
+        id BIGINT GENERATED ALWAYS AS IDENTITY PRIMARY KEY,
+        shop_name VARCHAR(255) NOT NULL,
+        shop_code VARCHAR(255) NOT NULL,
+        haibo_shop_id VARCHAR(255) NOT NULL,
+        product_name VARCHAR(255) NOT NULL,
+        haibo_product_id VARCHAR(255) NOT NULL,
+        product_code VARCHAR(255) NOT NULL,
+        barcode VARCHAR(255) NOT NULL,
+        spec VARCHAR(255) NOT NULL,
+        unit VARCHAR(255) NOT NULL,
+        jd_sosong_price VARCHAR(255) NOT NULL,
+        meituan_price VARCHAR(255) NOT NULL,
+        eleme_price VARCHAR(255) NOT NULL,
+        member_price VARCHAR(255) NOT NULL,
+        online_stock VARCHAR(255) NOT NULL,
+        frontend_category VARCHAR(255) NOT NULL,
+        jd_sosong_sale_status VARCHAR(255) NOT NULL,
+        meituan_sale_status VARCHAR(255) NOT NULL,
+        eleme_sale_status VARCHAR(255) NOT NULL,
+        permanent_offline_status VARCHAR(255) NOT NULL,
+        out_of_stock VARCHAR(255) NOT NULL,
+        product_level VARCHAR(255) NOT NULL,
+        existing VARCHAR(255) NOT NULL,
+        offline_sale_status VARCHAR(255) NOT NULL,
+        is_listed_item VARCHAR(255) NOT NULL,
+        meituan_min_qty VARCHAR(255) NOT NULL,
+        eleme_min_qty VARCHAR(255) NOT NULL,
+        jd_sosong_min_qty_1 VARCHAR(255) NOT NULL,
+        jd_sosong_min_qty_2 VARCHAR(255) NOT NULL,
+        product_tags VARCHAR(255) NOT NULL,
+        sales_avg_30d VARCHAR(255) NOT NULL,
+        sales_avg_14d VARCHAR(255) NOT NULL,
+        sales_avg_7d VARCHAR(255) NOT NULL,
+        sales_avg_3d VARCHAR(255) NOT NULL,
+        sales_total_30d VARCHAR(255) NOT NULL,
+        sales_total_14d VARCHAR(255) NOT NULL,
+        sales_total_7d VARCHAR(255) NOT NULL,
+        sales_total_3d VARCHAR(255) NOT NULL,
+        created_time VARCHAR(255) NOT NULL,
+        updated_time VARCHAR(255) NOT NULL,
+        meituan_shop_product_name VARCHAR(255) NOT NULL,
+        eleme_shop_product_name VARCHAR(255) NOT NULL,
+        spu_id VARCHAR(255) NOT NULL,
+        gross_weight VARCHAR(255) NOT NULL,
+        meituan_gross_weight VARCHAR(255) NOT NULL,
+        image_url VARCHAR(255) NOT NULL,
+        custom_attributes VARCHAR(255) NOT NULL,
+        has_rich_description VARCHAR(255) NOT NULL,
+        is_meituan_standard_ref VARCHAR(255) NOT NULL,
+        subtitle VARCHAR(255) NOT NULL,
+        dt VARCHAR(255) NOT NULL
+    );
+
+    COMMENT ON TABLE dwd_store_common_commodity_di_1d IS '门店商品';
+
+    COMMENT ON COLUMN dwd_store_common_commodity_di_1d.shop_name IS '门店名称';
+    COMMENT ON COLUMN dwd_store_common_commodity_di_1d.shop_code IS '门店编码';
+    COMMENT ON COLUMN dwd_store_common_commodity_di_1d.haibo_shop_id IS '海博门店id';
+    COMMENT ON COLUMN dwd_store_common_commodity_di_1d.product_name IS '商品名称';
+    COMMENT ON COLUMN dwd_store_common_commodity_di_1d.haibo_product_id IS '海博商品ID';
+    COMMENT ON COLUMN dwd_store_common_commodity_di_1d.product_code IS '商品编码';
+    COMMENT ON COLUMN dwd_store_common_commodity_di_1d.barcode IS '条形码';
+    COMMENT ON COLUMN dwd_store_common_commodity_di_1d.spec IS '规格';
+    COMMENT ON COLUMN dwd_store_common_commodity_di_1d.unit IS '单位';
+    COMMENT ON COLUMN dwd_store_common_commodity_di_1d.jd_sosong_price IS '京东秒送渠道售价';
+    COMMENT ON COLUMN dwd_store_common_commodity_di_1d.meituan_price IS '美团渠道售价';
+    COMMENT ON COLUMN dwd_store_common_commodity_di_1d.eleme_price IS '饿了么渠道售价';
+    COMMENT ON COLUMN dwd_store_common_commodity_di_1d.member_price IS '会员价';
+    COMMENT ON COLUMN dwd_store_common_commodity_di_1d.online_stock IS '线上可售库存';
+    COMMENT ON COLUMN dwd_store_common_commodity_di_1d.frontend_category IS '前台类目';
+    COMMENT ON COLUMN dwd_store_common_commodity_di_1d.jd_sosong_sale_status IS '京东秒送售卖状态';
+    COMMENT ON COLUMN dwd_store_common_commodity_di_1d.meituan_sale_status IS '美团售卖状态';
+    COMMENT ON COLUMN dwd_store_common_commodity_di_1d.eleme_sale_status IS '饿了么售卖状态';
+    COMMENT ON COLUMN dwd_store_common_commodity_di_1d.permanent_offline_status IS '全渠道永久停售状态';
+    COMMENT ON COLUMN dwd_store_common_commodity_di_1d.out_of_stock IS '无库存可售';
+    COMMENT ON COLUMN dwd_store_common_commodity_di_1d.product_level IS '商品级别';
+    COMMENT ON COLUMN dwd_store_common_commodity_di_1d.existing IS '是否存在';
+    COMMENT ON COLUMN dwd_store_common_commodity_di_1d.offline_sale_status IS '线下品售卖状态';
+    COMMENT ON COLUMN dwd_store_common_commodity_di_1d.is_listed_item IS '是否清单商品';
+    COMMENT ON COLUMN dwd_store_common_commodity_di_1d.meituan_min_qty IS '美团起购数';
+    COMMENT ON COLUMN dwd_store_common_commodity_di_1d.eleme_min_qty IS '饿了么起购数';
+    COMMENT ON COLUMN dwd_store_common_commodity_di_1d.jd_sosong_min_qty_1 IS '京东秒送起购数';
+    COMMENT ON COLUMN dwd_store_common_commodity_di_1d.jd_sosong_min_qty_2 IS '京东秒送起购数';
+    COMMENT ON COLUMN dwd_store_common_commodity_di_1d.product_tags IS '商品标签';
+    COMMENT ON COLUMN dwd_store_common_commodity_di_1d.sales_avg_30d IS '30日日均销量';
+    COMMENT ON COLUMN dwd_store_common_commodity_di_1d.sales_avg_14d IS '14日日均销量';
+    COMMENT ON COLUMN dwd_store_common_commodity_di_1d.sales_avg_7d IS '7日日均销量';
+    COMMENT ON COLUMN dwd_store_common_commodity_di_1d.sales_avg_3d IS '3日日均销量';
+    COMMENT ON COLUMN dwd_store_common_commodity_di_1d.sales_total_30d IS '30日总销量';
+    COMMENT ON COLUMN dwd_store_common_commodity_di_1d.sales_total_14d IS '14日总销量';
+    COMMENT ON COLUMN dwd_store_common_commodity_di_1d.sales_total_7d IS '7日总销量';
+    COMMENT ON COLUMN dwd_store_common_commodity_di_1d.sales_total_3d IS '3日总销量';
+    COMMENT ON COLUMN dwd_store_common_commodity_di_1d.created_time IS '创建时间';
+    COMMENT ON COLUMN dwd_store_common_commodity_di_1d.updated_time IS '最新更新时间';
+    COMMENT ON COLUMN dwd_store_common_commodity_di_1d.meituan_shop_product_name IS '美团门店商品名称';
+    COMMENT ON COLUMN dwd_store_common_commodity_di_1d.eleme_shop_product_name IS '饿了么门店商品名称';
+    COMMENT ON COLUMN dwd_store_common_commodity_di_1d.spu_id IS 'SPUID';
+    COMMENT ON COLUMN dwd_store_common_commodity_di_1d.gross_weight IS '毛重';
+    COMMENT ON COLUMN dwd_store_common_commodity_di_1d.meituan_gross_weight IS '美团毛重';
+    COMMENT ON COLUMN dwd_store_common_commodity_di_1d.image_url IS '图片';
+    COMMENT ON COLUMN dwd_store_common_commodity_di_1d.custom_attributes IS '自定义商品属性';
+    COMMENT ON COLUMN dwd_store_common_commodity_di_1d.has_rich_description IS '有无图文描述';
+    COMMENT ON COLUMN dwd_store_common_commodity_di_1d.is_meituan_standard_ref IS '引用美团标库';
+    COMMENT ON COLUMN dwd_store_common_commodity_di_1d.subtitle IS '副标题';
+    COMMENT ON COLUMN dwd_store_common_commodity_di_1d.dt IS '分区字段. yyyyMMdd';
