--- a/jobs/dwd_store_common_meituan_commodity_category_di_1d.yaml
+++ b/jobs/dwd_store_common_meituan_commodity_category_di_1d.yaml
@@ -2,15 +2,27 @@ type: 'SQL'
 config:
   source: 'default'
   sql: |
-    CREATE TABLE dwd_store_common_meituan_commodity_category_di_1d (
-      id BIGINT AUTO_INCREMENT PRIMARY KEY,
-      category_level1_name VARCHAR(255) NOT NULL COMMENT '一级类目名称',
-      category_level2_name VARCHAR(255) NOT NULL COMMENT '二级类目名称',
-      category_level3_name VARCHAR(255) NOT NULL COMMENT '三级类目名称',
-      category_level3_id VARCHAR(255) NOT  NULL COMMENT '三级类目id',
-      required_sales_attributes VARCHAR(255) NOT NULL COMMENT '必填销售属性',
-      optional_sales_attributes VARCHAR(255) NOT NULL COMMENT '可选销售属性',
-      max_optional_attr_usage VARCHAR(255) NOT NULL COMMENT '可选销售属性的使用数量上限',
-      supports_production_date VARCHAR(255) NOT NULL COMMENT '是否支持生产日期',
-      dt VARCHAR(255) NOT NULL COMMENT '分区字段. yyyyMMdd'
-    ) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COMMENT '美团类目';
+    CREATE TABLE IF NOT EXISTS dwd_store_common_meituan_commodity_category_di_1d (
+        id BIGINT GENERATED ALWAYS AS IDENTITY PRIMARY KEY,
+        category_level1_name VARCHAR(255) NOT NULL,
+        category_level2_name VARCHAR(255) NOT NULL,
+        category_level3_name VARCHAR(255) NOT NULL,
+        category_level3_id VARCHAR(255) NOT NULL,
+        required_sales_attributes VARCHAR(255) NOT NULL,
+        optional_sales_attributes VARCHAR(255) NOT NULL,
+        max_optional_attr_usage VARCHAR(255) NOT NULL,
+        supports_production_date VARCHAR(255) NOT NULL,
+        dt VARCHAR(255) NOT NULL
+    );
+
+    COMMENT ON TABLE dwd_store_common_meituan_commodity_category_di_1d IS '美团类目';
+
+    COMMENT ON COLUMN dwd_store_common_meituan_commodity_category_di_1d.category_level1_name IS '一级类目名称';
+    COMMENT ON COLUMN dwd_store_common_meituan_commodity_category_di_1d.category_level2_name IS '二级类目名称';
+    COMMENT ON COLUMN dwd_store_common_meituan_commodity_category_di_1d.category_level3_name IS '三级类目名称';
+    COMMENT ON COLUMN dwd_store_common_meituan_commodity_category_di_1d.category_level3_id IS '三级类目id';
+    COMMENT ON COLUMN dwd_store_common_meituan_commodity_category_di_1d.required_sales_attributes IS '必填销售属性';
+    COMMENT ON COLUMN dwd_store_common_meituan_commodity_category_di_1d.optional_sales_attributes IS '可选销售属性';
+    COMMENT ON COLUMN dwd_store_common_meituan_commodity_category_di_1d.max_optional_attr_usage IS '可选销售属性的使用数量上限';
+    COMMENT ON COLUMN dwd_store_common_meituan_commodity_category_di_1d.supports_production_date IS '是否支持生产日期';
+    COMMENT ON COLUMN dwd_store_common_meituan_commodity_category_di_1d.dt IS '分区字段. yyyyMMdd';
