--- a/jobs/dwd_store_sales_commodity_stats_di_1d.yaml
+++ b/jobs/dwd_store_sales_commodity_stats_di_1d.yaml
@@ -3,36 +3,70 @@ config:
   source: 'default'
   sql: |
     CREATE TABLE IF NOT EXISTS dwd_store_sales_commodity_stats_di_1d (
-      id BIGINT AUTO_INCREMENT PRIMARY KEY,
-      date_str VARCHAR(255) NOT NULL COMMENT '日期',
-      store_group VARCHAR(255) NOT NULL COMMENT '门店分组',
-      store_name VARCHAR(255) NOT NULL COMMENT '门店名称',
-      brand VARCHAR(255) NOT NULL COMMENT '品牌',
-      channel_name VARCHAR(255) NOT NULL COMMENT '渠道名称',
-      category_level2 VARCHAR(255) NOT NULL COMMENT '二级类目',
-      tag VARCHAR(255) NOT NULL COMMENT '标签',
-      warehouse_store_sku_code VARCHAR(255) NOT NULL COMMENT '仓店商品编码',
-      product_name VARCHAR(255) NOT NULL COMMENT '商品名称',
-      related_order_qty VARCHAR(255) NOT NULL COMMENT '相关订单量',
-      channel_store_order_qty VARCHAR(255) NOT NULL COMMENT '渠道店订单量',
-      order_penetration_rate VARCHAR(255) NOT NULL COMMENT '订单渗透率',
-      product_original_amount VARCHAR(255) NOT NULL COMMENT '商品原价金额',
-      product_quantity VARCHAR(255) NOT NULL COMMENT '商品数量',
-      merchant_subsidy VARCHAR(255) NOT NULL COMMENT '商品商家补贴',
-      promo_cost_ratio VARCHAR(255) NOT NULL COMMENT '商品活动成本占比',
-      product_gross_profit VARCHAR(255) NOT NULL COMMENT '商品毛利额',
-      product_gross_margin VARCHAR(255) NOT NULL COMMENT '商品毛利率',
-      product_net_profit VARCHAR(255) NOT NULL COMMENT '商品净利额',
-      product_net_margin VARCHAR(255) NOT NULL COMMENT '商品净利率',
-      commission VARCHAR(255) NOT NULL COMMENT '佣金',
-      order_revenue VARCHAR(255) NOT NULL COMMENT '订单营收',
-      order_gross_profit VARCHAR(255) NOT NULL COMMENT '订单毛利额',
-      order_gross_margin VARCHAR(255) NOT NULL COMMENT '订单毛利率',
-      delivery_cost VARCHAR(255) NOT NULL COMMENT '订单配送成本',
-      delivery_cost_ratio VARCHAR(255) NOT NULL COMMENT '订单配送成本占比',
-      merchant_promo_cost VARCHAR(255) NOT NULL COMMENT '商家活动成本',
-      merchant_promo_cost_ratio VARCHAR(255) NOT NULL COMMENT '商家活动成本占比',
-      avg_order_value VARCHAR(255) NOT NULL COMMENT '订单客单价',
-      other_fees VARCHAR(255) NOT NULL COMMENT '其他费用',
-      dt VARCHAR(255) NOT NULL COMMENT '分区字段. yyyyMMdd'
-    ) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COMMENT '门店日销售数据';
+        id BIGINT GENERATED ALWAYS AS IDENTITY PRIMARY KEY,
+        date_str VARCHAR(255) NOT NULL,
+        store_group VARCHAR(255) NOT NULL,
+        store_name VARCHAR(255) NOT NULL,
+        brand VARCHAR(255) NOT NULL,
+        channel_name VARCHAR(255) NOT NULL,
+        category_level2 VARCHAR(255) NOT NULL,
+        tag VARCHAR(255) NOT NULL,
+        warehouse_store_sku_code VARCHAR(255) NOT NULL,
+        product_name VARCHAR(255) NOT NULL,
+        related_order_qty VARCHAR(255) NOT NULL,
+        channel_store_order_qty VARCHAR(255) NOT NULL,
+        order_penetration_rate VARCHAR(255) NOT NULL,
+        product_original_amount VARCHAR(255) NOT NULL,
+        product_quantity VARCHAR(255) NOT NULL,
+        merchant_subsidy VARCHAR(255) NOT NULL,
+        promo_cost_ratio VARCHAR(255) NOT NULL,
+        product_gross_profit VARCHAR(255) NOT NULL,
+        product_gross_margin VARCHAR(255) NOT NULL,
+        product_net_profit VARCHAR(255) NOT NULL,
+        product_net_margin VARCHAR(255) NOT NULL,
+        commission VARCHAR(255) NOT NULL,
+        order_revenue VARCHAR(255) NOT NULL,
+        order_gross_profit VARCHAR(255) NOT NULL,
+        order_gross_margin VARCHAR(255) NOT NULL,
+        delivery_cost VARCHAR(255) NOT NULL,
+        delivery_cost_ratio VARCHAR(255) NOT NULL,
+        merchant_promo_cost VARCHAR(255) NOT NULL,
+        merchant_promo_cost_ratio VARCHAR(255) NOT NULL,
+        avg_order_value VARCHAR(255) NOT NULL,
+        other_fees VARCHAR(255) NOT NULL,
+        dt VARCHAR(255) NOT NULL
+    );
+
+    COMMENT ON TABLE dwd_store_sales_commodity_stats_di_1d IS '门店日销售数据';
+
+    COMMENT ON COLUMN dwd_store_sales_commodity_stats_di_1d.date_str IS '日期';
+    COMMENT ON COLUMN dwd_store_sales_commodity_stats_di_1d.store_group IS '门店分组';
+    COMMENT ON COLUMN dwd_store_sales_commodity_stats_di_1d.store_name IS '门店名称';
+    COMMENT ON COLUMN dwd_store_sales_commodity_stats_di_1d.brand IS '品牌';
+    COMMENT ON COLUMN dwd_store_sales_commodity_stats_di_1d.channel_name IS '渠道名称';
+    COMMENT ON COLUMN dwd_store_sales_commodity_stats_di_1d.category_level2 IS '二级类目';
+    COMMENT ON COLUMN dwd_store_sales_commodity_stats_di_1d.tag IS '标签';
+    COMMENT ON COLUMN dwd_store_sales_commodity_stats_di_1d.warehouse_store_sku_code IS '仓店商品编码';
+    COMMENT ON COLUMN dwd_store_sales_commodity_stats_di_1d.product_name IS '商品名称';
+    COMMENT ON COLUMN dwd_store_sales_commodity_stats_di_1d.related_order_qty IS '相关订单量';
+    COMMENT ON COLUMN dwd_store_sales_commodity_stats_di_1d.channel_store_order_qty IS '渠道店订单量';
+    COMMENT ON COLUMN dwd_store_sales_commodity_stats_di_1d.order_penetration_rate IS '订单渗透率';
+    COMMENT ON COLUMN dwd_store_sales_commodity_stats_di_1d.product_original_amount IS '商品原价金额';
+    COMMENT ON COLUMN dwd_store_sales_commodity_stats_di_1d.product_quantity IS '商品数量';
+    COMMENT ON COLUMN dwd_store_sales_commodity_stats_di_1d.merchant_subsidy IS '商品商家补贴';
+    COMMENT ON COLUMN dwd_store_sales_commodity_stats_di_1d.promo_cost_ratio IS '商品活动成本占比';
+    COMMENT ON COLUMN dwd_store_sales_commodity_stats_di_1d.product_gross_profit IS '商品毛利额';
+    COMMENT ON COLUMN dwd_store_sales_commodity_stats_di_1d.product_gross_margin IS '商品毛利率';
+    COMMENT ON COLUMN dwd_store_sales_commodity_stats_di_1d.product_net_profit IS '商品净利额';
+    COMMENT ON COLUMN dwd_store_sales_commodity_stats_di_1d.product_net_margin IS '商品净利率';
+    COMMENT ON COLUMN dwd_store_sales_commodity_stats_di_1d.commission IS '佣金';
+    COMMENT ON COLUMN dwd_store_sales_commodity_stats_di_1d.order_revenue IS '订单营收';
+    COMMENT ON COLUMN dwd_store_sales_commodity_stats_di_1d.order_gross_profit IS '订单毛利额';
+    COMMENT ON COLUMN dwd_store_sales_commodity_stats_di_1d.order_gross_margin IS '订单毛利率';
+    COMMENT ON COLUMN dwd_store_sales_commodity_stats_di_1d.delivery_cost IS '订单配送成本';
+    COMMENT ON COLUMN dwd_store_sales_commodity_stats_di_1d.delivery_cost_ratio IS '订单配送成本占比';
+    COMMENT ON COLUMN dwd_store_sales_commodity_stats_di_1d.merchant_promo_cost IS '商家活动成本';
+    COMMENT ON COLUMN dwd_store_sales_commodity_stats_di_1d.merchant_promo_cost_ratio IS '商家活动成本占比';
+    COMMENT ON COLUMN dwd_store_sales_commodity_stats_di_1d.avg_order_value IS '订单客单价';
+    COMMENT ON COLUMN dwd_store_sales_commodity_stats_di_1d.other_fees IS '其他费用';
+    COMMENT ON COLUMN dwd_store_sales_commodity_stats_di_1d.dt IS '分区字段. yyyyMMdd';
