--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -12,7 +12,7 @@ tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
 http = "1.0"
 
 # Database and ORM
-sea-orm = { version = "1.1.17", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros", "debug-print", "mock"] }
+sea-orm = { version = "1.1.17", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "debug-print", "mock"] }
 sea-orm-migration = "1.1.17"
 
 # Redis
