--- a/backend/migration/Cargo.toml
+++ b/backend/migration/Cargo.toml
@@ -16,7 +16,7 @@ tokio = { version = "1.0", features = ["full"] }
 [dependencies.sea-orm]
 version = "1.1.17"
 features = [
-    "sqlx-mysql",
+    "sqlx-postgres",
     "runtime-tokio-rustls",
     "macros",
 ]
