--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+# Migration
+migration = { path = "migration" }
 # Web framework
 axum = { version = "0.8.5", features = ["multipart"] }
 tokio = { version = "1.0", features = ["full"] }
