--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -16,6 +16,7 @@ http = "1.0"
 # Database and ORM
 sea-orm = { version = "1.1.17", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "debug-print", "mock"] }
 sea-orm-migration = "1.1.17"
+sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }
 
 # Redis
 redis = { version = "0.21", features = ["tokio-comp"] }
